Fix Filter heading padding to align border bottom with table header

--- a/resources/assets/less/collections.less
+++ b/resources/assets/less/collections.less
@@ -20,7 +20,7 @@
 			overflow-y: auto;
 			.title {
 				margin-bottom: 20px;
-				padding: 22px 25px 21px 25px;
+				padding: 23px 25px;
 				border-bottom: 1px solid @md-grey-300;
 			  	color: @md-grey-600;
 			}
